Fix sidebar visibility and search results animation

--- a/resources/skins.tgui.styles/components/Sidebar.less
+++ b/resources/skins.tgui.styles/components/Sidebar.less
@@ -1,5 +1,4 @@
 @import '../variables.less';
-@import '../layouts/screen.less';
 @import 'checkboxHack.less';
 
 .tgui-sidebar-container {
@@ -10,12 +9,22 @@
   height: @height-sidebar;
   z-index: @z-index-header;
   width: @width-sidebar-px;
-  transition:
-    top var(--transition-time),
-    height var(--transition-time);
 
   @media (min-width: @min-width-desktop-wide) {
     width: @width-sidebar-px-wide;
+  }
+
+  @{selector-main-menu-closed} ~ & {
+    transform: translateX(calc(-1 * @width-sidebar-px));
+    visibility: hidden;
+
+    @media (min-width: @min-width-desktop-wide) {
+      transform: translateX(calc(-1 * @width-sidebar-px-wide));
+    }
+  }
+
+  .tgui-animations-ready & {
+    transition: all var(--transition-time);
   }
 }
 
@@ -32,38 +41,5 @@
 
   &:hover {
     overflow-y: auto;
-  }
-
-  @{selector-main-menu-closed} ~ .tgui-sidebar-container & {
-    transform: translateX(-25em);
-  }
-
-  .tgui-animations-ready & {
-    transition: transform var(--transition-time);
-  }
-}
-
-.mw-sidebar-action {
-  .mw-sidebar-action-item {
-    margin-top: 4px;
-    margin-bottom: 4px;
-
-    .mw-sidebar-action-heading {
-      margin-bottom: 0.75em;
-    }
-
-    .mw-sidebar-action-content {
-      > * {
-        font-size: @font-size-nav-main-body;
-      }
-
-      > a {
-        font-weight: bold;
-      }
-    }
-
-    .tgui-language-sidebar-alert {
-      padding: 0.75em;
-    }
   }
 }
